--- a/post1.html
+++ b/post1.html
@@ -6,8 +6,50 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Blog</title>
     <link rel="stylesheet" type="text/css" href="styles/post1.css" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Roboto&display=swap"
+      rel="stylesheet"
+    />
     <style>
-      /* Your work here */
+      article {
+        font-family: Roboto;
+        font-style: normal;
+        text-align: center;
+      }
+      h2 {
+        height: 16px;
+        font-style: normal;
+        font-weight: 500;
+        font-size: 20px;
+        line-height: 16px;
+        color: #4a90e2;
+      }
+      h1 {
+        font-weight: bold;
+        font-size: 30px;
+        line-height: 35px;
+      }
+      h3 {
+        font-weight: normal;
+        font-size: 14px;
+        line-height: 16px;
+      }
+      h3 span {
+        color: #666666;
+      }
+      p {
+        font-weight: normal;
+        font-size: 16px;
+        line-height: 26px;
+      }
+      a {
+        font-style: normal;
+        font-weight: 500;
+        font-size: 16px;
+        line-height: 15px;
+        color: #4a90e2;
+        text-decoration: none;
+      }
     </style>
   </head>
   <body>
