--- a/post2.html
+++ b/post2.html
@@ -6,8 +6,62 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Post 2</title>
     <link rel="stylesheet" type="text/css" href="styles/post2.css" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Merriweather&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css?family=Lora&display=swap"
+      rel="stylesheet"
+    />
     <style>
-      /* Your work here */
+      body {
+        font-family: Merriweather;
+      }
+      article {
+        float: left;
+      }
+      p:first-of-type {
+        font-style: normal;
+        font-weight: normal;
+        font-size: 14px;
+        line-height: 18px;
+        color: #666666;
+      }
+      p span {
+        font-weight: normal;
+        color: #999999;
+      }
+      h1 {
+        font-family: Lora;
+        font-style: normal;
+        font-weight: bold;
+        font-size: 23px;
+        line-height: 33px;
+        /* identical to box height, or 143% */
+
+        color: #171717;
+      }
+      h3 {
+        font-style: normal;
+        font-weight: normal;
+        font-size: 14px;
+        line-height: 18px;
+        color: #999999;
+      }
+      h3 span {
+        color: red;
+        text-decoration: underline;
+      }
+      p {
+        font-style: italic;
+        font-weight: normal;
+        font-size: 14px;
+        line-height: 24px;
+        /* or 171% */
+
+        color: #999999;
+      }
     </style>
   </head>
   <body>
