--- a/categories.html
+++ b/categories.html
@@ -39,6 +39,9 @@
       }
       hr {
         width: 90%;
+        border-right: none;
+        border-left: none;
+        border-bottom: none;
         color: #666666;
       }
     </style>
