--- a/post1.html
+++ b/post1.html
@@ -20,9 +20,10 @@
         height: 16px;
         font-style: normal;
         font-weight: 500;
-        font-size: 20px;
+        font-size: 14px;
         line-height: 16px;
         color: #4a90e2;
+        text-transform: uppercase;
       }
       h1 {
         font-weight: bold;
